# bookbot

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  stats.py
bookbot/: __main__.py  main.py  stats.py
