[project]
name = "bookbot"
version = "0.1.0"
description = "A simple bookbot for reading and processing text"
authors = [
    {name = "Daniablos"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [
  { include = "bookbot" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
